--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,18 @@ body {
 .sobre-gamifica {
     width: 500px;
     height: 600px;
+    
+    left: 5%;
+}
 
+.sobre-gamificacao {
+    width: 450px;
+    height: 500px;
+
+    right: 5%;
+}
+
+.sobre-gamifica, .sobre-gamificacao {
     padding: 40px;
 
     background-color: #fff;
@@ -33,17 +44,16 @@ body {
 
     position: absolute;
     top: 10%;
-    left: 5%;
 }
 
-.sobre-gamifica h2 {
+.sobre-gamifica h2, .sobre-gamificacao h2 {
     margin-bottom: 40px;
 
     font-size: 30px;
     text-align: center;
 }
 
-.sobre-gamifica p {
+.sobre-gamifica p, .sobre-gamificacao p {
     font-size: 16px;
     text-align: justify;
 
