feat: Início da exibição dos cases

--- a/src/style.css
+++ b/src/style.css
@@ -46,16 +46,35 @@ body {
     top: 10%;
 }
 
-.sobre-gamifica h2, .sobre-gamificacao h2 {
+.sobre-gamifica h2, .sobre-gamificacao h2, .texto-case h2 {
     margin-bottom: 40px;
 
     font-size: 30px;
     text-align: center;
 }
 
-.sobre-gamifica p, .sobre-gamificacao p {
+.sobre-gamifica p, .sobre-gamificacao p, .texto-case p {
     font-size: 16px;
     text-align: justify;
 
     line-height: 2;
+}
+
+.texto-case {
+    width: 500px;
+    height: 600px;
+
+    padding: 40px;
+
+    background-color: #fff;
+
+    border: solid 15px #cf5830;
+    border-radius: 30px;
+
+    color: black;
+    font-family: "Anta";
+
+    position: absolute;
+    top: 10%;
+    left: 5%;
 }
